Email settings to .env

--- a/.env
+++ b/.env
@@ -8,6 +8,12 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=postgres
 DB_PORT=5432
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USE_TLS=1
+EMAIL_PORT=587
+EMAIL_HOST_USER=sender@gmail.com
+EMAIL_HOST_PASSWORD=senderpass
 REDIS_LOCATION=redis://redis:6379/0
 INTERNAL_IPS=127.0.0.1,0.0.0.0
 CELERY_BROKER_URL=amqp://guest@rabbitmq//
