--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = django,django_filters,drf_util,drf_yasg,rest_framework,rest_framework_simplejwt
+known_third_party = celery,dateutil,django,django_filters,dotenv,drf_util,drf_yasg,faker,rest_framework,rest_framework_simplejwt,sentry_sdk
