--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,80 +1,77 @@
-name: Run tests
+name: Django tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - master
+      - development
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - master
+      - development
+
+env:
+  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  DEBUG: ${{ secrets.DEBUG }}
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        id: setup-python
-        with:
-          python-version: '3.11'
-
-      - name: Install requirements
-        run: |
-          pip install --no-cache-dir flake8
-
-      - name: run flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --statistics
-
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-      redis:
-        image: redis:7.0.7-alpine
-        env:
-          ALLOW_EMPTY_PASSWORD: yes
-        ports:
-          - 6379:6379
-
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
+      #----------------------------------------------
+      #       check-out repo and set-up python
+      #----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Set up python
         id: setup-python
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.11'
+          python-version: "3.10"
+      #----------------------------------------------
+      #  -----  install & configure poetry  -----
+      #----------------------------------------------
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
 
-      - name: Install pip dependencies
-        if: steps.cache-venv.outputs.cache-hit != 'true'
-        run: |
-          python -m venv venv
-          . venv/bin/activate
-          pip install poetry
-          poetry install
-
-      - name: Run tests
+      #----------------------------------------------
+      #       load cached venv if cache exists
+      #----------------------------------------------
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      #----------------------------------------------
+      # install dependencies if cache does not exist
+      #----------------------------------------------
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
+      #----------------------------------------------
+      # install your root project, if required
+      #----------------------------------------------
+      - name: Install library
+        run: poetry install --no-interaction
+      #----------------------------------------------
+      # Load variables from github env to .env
+      #----------------------------------------------
+      - name: Write .env
+        uses: CallePuzzle/envvar-to-dotenv-action@0.1.0
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-          POSTGRES_HOST: postgres
-          REDIS_DB: 0
-          REDIS_HOST: redis
-          PYTHONUNBUFFERED: 1
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        with:
+          variableNames: SECRET_KEY,DEBUG
+          envPath: '.env'
+      #----------------------------------------------
+      #              run test suite
+      #----------------------------------------------
+      - name: Run tests
         run: |
-          . venv/bin/activate
-          python -m internship test
+          source .venv/bin/activate
+          python -m validator test
