--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ version: '3.9'
 volumes:
     internship_postgres:
         name: internship_postgres
+    internship_rabbitmq:
+        name: internship_rabbitmq
 
 
 services:
@@ -24,7 +26,7 @@ services:
       - .env
     depends_on:
       - postgres
-      - redis
+      - rabbitmq
 
 
   postgres:
@@ -32,9 +34,9 @@ services:
     container_name: internship_postgres
     hostname: postgres.internship.com
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - internship_postgres:/var/lib/postgresql/data
     ports:
@@ -42,49 +44,53 @@ services:
 
 
   pghero:
-    image: ankane/pghero
+    image: ankane/pghero:latest
     container_name: pghero
-    network_mode: host
     ports:
-      - 8080:8080
+      - "8080:8080"
     environment:
-      DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
-
+      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@host.docker.internal:${DB_PORT}/${DB_NAME}
 
   redis:
-    image: redis:7.0.7
-
+    container_name: internship_redis
+    image: redis:7.0.7-alpine
 
   rabbitmq:
-    image: rabbitmq:3.10.7-management
+    container_name: internship_rabbitmq
+    hostname: rabbitmq.internship.com
+    image: rabbitmq:latest
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_VHOST}
+    ports:
+        - "5672:5672"
+        - "15672:15672"
+    volumes:
+      - internship_rabbitmq:/var/lib/rabbitmq
 
 
-  celery-worker:
-    restart: always
+  internship_celery_worker:
+    container_name: internship_celery_worker
     build:
       context: .
       dockerfile: Dockerfile
-    image: madefire/chordtest
-    command: ['celery', '-A', 'internship', 'worker', '-l', 'info']
-    volumes:
-      - ./:/app/
+    env_file:
+      - .env
+    command: celery -A internship.celery:app worker -l INFO
     depends_on:
       - rabbitmq
-      - django
       - postgres
 
 
-  celery-beat-worker:
-    restart: always
+  internship_celery_beat:
+    container_name: internship_celery_beat
     build:
       context: .
       dockerfile: Dockerfile
-    image: madefire/chordtest
-    command: ['celery', '-A', 'internship', 'beat', '-l', 'info']
-    volumes:
-      - ./:/app/
+    env_file:
+        - .env
+    command: celery -A internship.celery:app beat -l INFO
     depends_on:
-      - celery-worker
       - rabbitmq
-      - django
       - postgres
