--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ virtualenv = "20.20.0"
 wcwidth = "0.2.6"
 pip-shims = "^0.7.3"
 django-debug-toolbar = "3.8.1"
+django-celery-beat = "^2.4.0"
+django-celery-results = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
