--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,17 +43,17 @@ services:
       - "5432:5432"
 
 
-  pghero:
-    image: ankane/pghero:latest
-    container_name: pghero
-    ports:
-      - "8080:8080"
-    environment:
-      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@host.docker.internal:${DB_PORT}/${DB_NAME}
-
-  redis:
-    container_name: internship_redis
-    image: redis:7.0.7-alpine
+#  pghero:
+#    image: ankane/pghero:latest
+#    container_name: pghero
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@host.docker.internal:${DB_PORT}/${DB_NAME}
+#
+#  redis:
+#    container_name: internship_redis
+#    image: redis:7.0.7-alpine
 
   rabbitmq:
     container_name: internship_rabbitmq
