--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,11 @@ env:
 
   INTERNAL_IPS: ${{ secrets.INTERNAL_IPS }}
 
-  CELERY_BROKER_URL: ${{ secrets.CELERY_BROKER_URL }}
+  RABBITMQ_USER: ${{ RABBITMQ_USER }}
+  RABBITMQ_PASS: ${{ RABBITMQ_PASS }}
+  RABBITMQ_HOST: ${{ RABBITMQ_HOST }}
+  RABBITMQ_PORT: ${{ RABBITMQ_PORT }}
+  RABBITMQ_VHOST: ${{ RABBITMQ_VHOST }}
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
 
 jobs:
