--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.9'
 
 volumes:
-    internship_postgres:
-        name: internship_postgres
-    internship_rabbitmq:
-        name: internship_rabbitmq
+  internship_postgres:
+    name: internship_postgres
+  internship_rabbitmq:
+    name: internship_rabbitmq
 
 
 services:
@@ -32,7 +32,7 @@ services:
   postgres:
     image: postgres:latest
     container_name: internship_postgres
-    hostname: postgres.internship.com
+    hostname: ${DB_HOST}
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -49,23 +49,27 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@host.docker.internal:${DB_PORT}/${DB_NAME}
+      DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+    depends_on:
+      - postgres
+
 
   redis:
     container_name: internship_redis
     image: redis:7.0.7-alpine
 
+
   rabbitmq:
     container_name: internship_rabbitmq
-    hostname: rabbitmq.internship.com
+    hostname: ${RABBITMQ_HOST}
     image: rabbitmq:latest
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
       RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_VHOST}
     ports:
-        - "5672:5672"
-        - "15672:15672"
+      - "5672:5672"
+      - "15672:15672"
     volumes:
       - internship_rabbitmq:/var/lib/rabbitmq
 
@@ -89,7 +93,7 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file:
-        - .env
+      - .env
     command: celery -A internship.celery:app beat -l INFO
     depends_on:
       - rabbitmq
