--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: '3.9'
 
 volumes:
+  internship_django:
+    name: internship_django
   internship_postgres:
     name: internship_postgres
   internship_rabbitmq:
@@ -22,6 +24,8 @@ services:
         python -m internship runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
+    volumes:
+      - ./media:/app/media
     env_file:
       - .env
     depends_on:
