--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ pip-shims = "^0.7.3"
 django-debug-toolbar = "3.8.1"
 django-celery-beat = "^2.4.0"
 django-celery-results = "^2.4.0"
+django-environ = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 
